build_error.txt
   Compiling tree-sitter-openscad-parser v0.1.0 (C:\Users\luciano\git\rust-openscad\libs\openscad-parser)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tree_sitter`
  --> libs\openscad-parser\bindings\rust\lib.rs:64:22
   |
64 |     let mut parser = tree_sitter::Parser::new();
   |                      ^^^^^^^^^^^ use of unresolved module or unlinked crate `tree_sitter`
   |
   = help: if you wanted to use a crate named `tree_sitter`, use `cargo add tree_sitter` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tree_sitter`
  --> libs\openscad-parser\bindings\rust\lib.rs:63:45
   |
63 | pub fn parse_source(source: &str) -> Result<tree_sitter::Tree, String> {
   |                                             ^^^^^^^^^^^ use of unresolved module or unlinked crate `tree_sitter`
   |
   = help: if you wanted to use a crate named `tree_sitter`, use `cargo add tree_sitter` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `tree-sitter-openscad-parser` (lib) due to 2 previous errors
